--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
     "framer-motion": "^11.3.24",
+    "lucide-react": "^0.438.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
